...
  }

   _buildBody( {required BookDetailEntity bookDetailEntity}) {
    return Builder(
      builder: (context) {
        return ListView(
            key: const Key('scroll'),
                padding: const EdgeInsets.symmetric(horizontal: 20.0),
                children: [
                  BookDetailCardWidget(bookDetailEntity: bookDetailEntity,),
                  VeryBigText(
                    'Book description',
                    context: context,
...
