...
      child: Scaffold(
        appBar: _myAppBar(context),
        drawer: MyDrawer(
          key: const ValueKey("drawer"),
        ),
        body: SingleChildScrollView(
          key: const Key('mySingleChildScrollView'),
          child: Column(
            crossAxisAlignment: CrossAxisAlignment.start,
            children: [
               const Search(),
              _mainGrid(),
              Padding(
...
